# AudioCaptureLibrary

./: CMakeLists.txt  GetAudio.cpp  GetAudio.h  MicCaptureLib.vcxproj  MicCaptureLib.vcxproj.filters  audio_capturer.cpp  audio_capturer.h  readMe.txt  window_2017_build_generator (2).bat
test_app/: CMakeLists.txt  MicCaptureWSAAPI.cpp
